# thermal-events

./: .env.example  .gitignore  README.md  _config.yml  pyproject.toml
.github/workflows/: main.yml
tests/: conftest.py  long_polygon.json  test_crud.py  test_strike_line_descriptor.py  test_thermal_event.py  test_thermal_event_instance.py
thermal_events/: __init__.py  base.py  database.py  hot_spot.py  misc.py  polysimplify.py  schemas.py  settings.py  strike_line_descriptor.py  thermal_event.py  thermal_event_instance.py
thermal_events/crud/: __init__.py  base.py  misc.py  strike_line_descriptor.py  thermal_event.py  thermal_event_instance.py
thermal_events/tools/: create_tables_in_database.py
