[tool.poetry]
name = "thermal-events"
version = "0.2.0"
description = "Python library that handles the thermal events and the interaction with the thermal events database of fusion reactors"
authors = ["Leo Dubus <leo.dubus@cea.fr>", "Erwan Grelier <erwan.grelier@cea.fr>", "Victor Moncada <victor.moncada@cea.fr>"]
readme = "README.md"
packages = [{include = "thermal_events"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.44"
numpy = "^1.23.4"
opencv-python = "^4.6.0.66"
marshmallow-sqlalchemy = "^0.28.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
